Update for latest spring boot version, clean up bean definition, update vector endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 # You can set these here, but better practice is to set them in the environment
-#spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
-#spring.neo4j.uri=${SPRING_NEO4J_URI}
-#spring.neo4j.authentication.username=${SPRING_NEO4J_AUTHENTICATION_USERNAME}
-#spring.neo4j.authentication.password=${SPRING_NEO4J_AUTHENTICATION_PASSWORD}
-#spring.data.neo4j.database=${SPRING_NEO4J_DATABASE}
+
+# LLM config
+spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
+
+# Neo4j config
+spring.neo4j.uri=${SPRING_NEO4J_URI}
+spring.neo4j.authentication.username=${SPRING_NEO4J_AUTHENTICATION_USERNAME}
+spring.neo4j.authentication.password=${SPRING_NEO4J_AUTHENTICATION_PASSWORD}
+spring.ai.vectorstore.neo4j.index-name=review-text
+spring.ai.vectorstore.neo4j.label=Review
+spring.ai.vectorstore.neo4j.initialize-schema=true
