--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 # You can set these here, but better practice is to set them in the environment
 
+logging.level.org.springframework.ai=DEBUG
+#spring.ai.chat.observations.log-completion=true
+#spring.ai.tools.observations.include-content=true
+#spring.ai.chat.client.observations.log-prompt=true
+#spring.ai.vectorstore.observations.log-query-response=true
+
 # LLM config
-spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
+spring.ai.openai.api-key=${OPENAI_KEY}
+spring.ai.openai.embedding.options.model=text-embedding-3-small
 
 # Neo4j config
-spring.neo4j.uri=${SPRING_NEO4J_URI}
-spring.neo4j.authentication.username=${SPRING_NEO4J_AUTHENTICATION_USERNAME}
-spring.neo4j.authentication.password=${SPRING_NEO4J_AUTHENTICATION_PASSWORD}
+spring.neo4j.uri=neo4j+s://demo.neo4jlabs.com
+spring.neo4j.authentication.username=goodreads
+spring.neo4j.authentication.password=goodreads
 spring.ai.vectorstore.neo4j.index-name=review-text
 spring.ai.vectorstore.neo4j.label=Review
-spring.ai.vectorstore.neo4j.initialize-schema=true
+spring.ai.vectorstore.neo4j.initialize-schema=false
